// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should match snapshot with label 1`] = `
<div
  class="discountContainer relative dib w-100"
>
  <div
    class="t-mini white absolute right-0 pv2 ph3 bg-emphasis"
  >
    <span>
      10%
    </span>
     LABEL
  </div>
  Test
</div>
`;

exports[`<DiscountBadge /> should match snapshot without label 1`] = `
<div
  class="discountContainer relative dib w-100"
>
  <div
    class="t-mini white absolute right-0 pv2 ph3 bg-emphasis"
  >
    -
    <span>
      10%
    </span>
     
  </div>
  Test
</div>
`;
